--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
@@ -5,7 +5,7 @@
 
     <div class="row border-bottom pb-2 titlepage">
       <div class="col-sm-12">
-        <a routerLink="[seller/product]">لیست محصولات</a>
+        <a [routerLink]="['seller/product']">لیست محصولات</a>
         /
         <span>ثبت محصول جدید</span>
       </div>
