--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
@@ -73,7 +73,6 @@
           </ul>
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="price">قیمت</label>
@@ -104,7 +103,6 @@
           </ul>
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="topText">متن بالای محصول</label>
@@ -125,7 +123,6 @@
           <p-inputSwitch formControlName="offer"></p-inputSwitch>
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid" *ngIf="form.controls.offer.value === true">
         <div class="p-field p-col">
           <label for="offerPercent">درصد تخفیف</label>
@@ -138,7 +135,6 @@
                  formControlName="offerText">
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="detail">جزئیات محصول</label>
@@ -154,7 +150,6 @@
           </ul>
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label>آپلود تصویر محصول</label>
@@ -179,7 +174,6 @@
           </ul>
         </div>
       </div>
-
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label>آپلود تصاویر گالری محصول</label>
@@ -197,7 +191,54 @@
         </div>
       </div>
 
+
       <div class="p-fluid p-formgrid p-grid">
+        <div class="p-field p-col">
+          <label for="selectedFeature">ویژگی</label>
+          <p-dropdown [options]="features" appendTo="body" id="selectedFeature"
+                      [(ngModel)]="selectedFeature"
+                      optionLabel="titleFarsi"
+                      placeholder="-- انتخاب کنید --"
+                      (onChange)="getFeatureValues($event)"></p-dropdown>
+        </div>
+        <div class="p-field p-col">
+          <label for="selectedValues">مقدار</label>
+          <p-listbox [options]="values" [(ngModel)]="selectedValues" id="selectedValues"
+                     [showToggleAll]="false"
+                     [metaKeySelection]="false" [checkbox]="true" [filter]="true"
+                     [multiple]="true" optionLabel="value"
+                     (onClick)="addSelectedValues($event)"
+                     [listStyle]="{'max-height':'250px'}" [style]="{'width':'15rem'}">
+            <ng-template let-value pTemplate="item">
+              <div class="value-item">
+                <div>{{value.value.value}}</div>
+              </div>
+            </ng-template>
+          </p-listbox>
+        </div>
+      </div>
+      <p class="pt-3">لیست انتخابی شما</p>
+      <p-table [value]="showSelectedFeatures">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>ویژگی</th>
+            <th>مقدار</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-feature>
+          <tr>
+            <td>{{feature.title}}</td>
+            <td>{{feature.value}}</td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="2">هیچ ویژگی انتخاب نشده است.</td>
+          </tr>
+        </ng-template>
+      </p-table>
+
+      <div class="p-fluid p-formgrid p-grid pt-3">
         <div class="p-field p-col">
           <div class="float-left">
             <button pButton label="ثبت محصول جدید" class="ui-button-success"
