--- a/src/app/Core/dashboard-seller/product-seller/edit-product/edit-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/edit-product/edit-product.component.html
@@ -203,6 +203,22 @@
 
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
+          <label for="briefFeature">جزئیات محصول</label>
+          <p-editor formControlName="briefFeature" id="briefFeature" [style]="{'height':'200px'}"></p-editor>
+          <ul class="mt-1 text-right list-inline"
+              *ngFor="let error of errorMessages.briefFeature">
+            <li class="font-small text-danger font-weight-bold list-inline-item"
+                *ngIf="form.get('briefFeature').hasError(error.type)
+                            && (form.get('briefFeature').dirty
+                            || form.get('briefFeature').touched)">
+              {{ error.message }}
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="p-fluid p-formgrid p-grid">
+        <div class="p-field p-col">
           <div class="float-left">
             <button pButton label="ثبت محصول جدید" class="ui-button-success"
                     icon="pi pi-check" iconPos="left" [disabled]="form.invalid"></button>
