--- a/src/app/Core/dashboard-seller/index/index.component.html
+++ b/src/app/Core/dashboard-seller/index/index.component.html
@@ -13,12 +13,13 @@
         <mat-list-item class="iran" [routerLink]="['/seller/profile']"> <i class="pi pi-user p-pl-4 text-white" style="font-size: 1rem"></i> اطلاعات کاربری</mat-list-item>
         <mat-divider></mat-divider>
 
+        <div *ngIf="localStorage.userJson.active === true">
         <mat-list-item [routerLink]="['/seller/product']"> <i class="pi pi-file p-pl-4 text-white" style="font-size: 1rem"></i> محصولات من</mat-list-item>
         <mat-divider></mat-divider>
 
         <mat-list-item [routerLink]="['/seller/feature']"> <i class="pi pi-file p-pl-4 text-white" style="font-size: 1rem"></i> ویژگی محصولات</mat-list-item>
         <mat-divider></mat-divider>
-
+        </div>
       </mat-list>
 
     </mat-nav-list>
@@ -40,7 +41,7 @@
       <div class="p-d-flex justify-content-center top-row">
         <div class="p-ml-5 text-white text-center">آخرین بازدید : 13 شهریور 1399 ( 10:59 )</div>
         <div class="p-mr-5">
-          <p class="text-white"><i class="pi pi-power-off text-white pl-2"></i>خروج کاربر</p>
+          <a class="text-white"><i class="pi pi-power-off text-white pl-2" (click)="logOut()"></i>خروج کاربر</a>
         </div>
       </div>
     </p-toolbar>
