--- a/src/app/Layout/seller/seller-header/seller-header.component.css
+++ b/src/app/Layout/seller/seller-header/seller-header.component.css
@@ -158,9 +158,10 @@
 }
 
 .logo {
-  font-size: 24px;
+  font-size: 30px;
   color: #ffffff;
   font-weight: 700;
+  font-family: Kalameh;
 }
 
 .site-nav .site-navigation .site-menu {
