--- a/src/app/Layout/seller/seller-header/seller-header.component.html
+++ b/src/app/Layout/seller/seller-header/seller-header.component.html
@@ -3,13 +3,13 @@
     <div class="site-navigation">
       <a routerLink="/" class="logo">begheymat.com</a>
       <ul class="d-none d-lg-inline-block text-left site-menu">
-        <li><a routerLink="/seller">راهنمای ثبت نام</a></li>
-        <li><a routerLink="/seller">آموزش پنل فروشندگان</a></li>
-        <li><a routerLink="/seller/login">ورود به پنل فروشندگان</a></li>
+        <li><a routerLink="/sellerBe">راهنمای ثبت نام</a></li>
+        <li><a routerLink="/sellerBe">آموزش پنل فروشندگان</a></li>
+        <li><a routerLink="/sellerBe/login">ورود به پنل فروشندگان</a></li>
       </ul>
       <ul class="d-none d-lg-inline-block text-left site-menu float-left">
         <li class="cta-button">
-          <a routerLink="/seller/register" target="_blank" class="">ثبت نام</a>
+          <a routerLink="/sellerBe/register" target="_blank" class="">ثبت نام</a>
         </li>
       </ul>
 
@@ -24,7 +24,7 @@
 <div class="hero">
   <div class="container">
     <div class="row align-items-center justify-content-between pt-sm-only">
-      <div class="col-sm-12 col-lg-5 intro text-right">
+      <div class="col-sm-12 col-lg-6 intro text-right">
         <h1 class="text-white font-weight-bold mb-4">
           در به قیمت
           فروشنده شو
@@ -33,8 +33,8 @@
           فروشگاه اینترنتی به قیمت، موقعیتی را برای فروشندگان فراهم کرده تا اجناسشان را به شکل اینترنتی به‌فروش برسانند. به این ترتیب تولیدکنندگان یا واردکنندگان کالا و همچنین کسانی که محصولات خانگی تولید می‌کنند می‌توانند از ویترین بزرگ به قیمت برای فروش محصولاتشان استفاده کنند.
         </p>
       </div>
-      <div class="col-sm-12 col-lg-7 text-right">
-        <img src="assets/bootstrap/img/xhero_img.png.pagespeed.ic.DEbE9QfN2U.webp" alt="Image" class="img-fluid">
+      <div class="col-sm-12 col-lg-6 text-center">
+        <img height="300px" src="assets/bootstrap/img/svg/shop.svg" alt="Image" >
       </div>
     </div>
   </div>
@@ -45,16 +45,15 @@
 <p-sidebar class="menuSidebar" Scroll [(visible)]="displayMobileMenu" [blockScroll]="true" [modal]="true"
            position="right">
   <div class=" text-center">
-    <img height="20px"  src="./assets/bootstrap/img/logo-fa.png" >
+    <img height="35px"  src="./assets/bootstrap/img/svg/logo.svg" >
   </div>
-
-  <div class="d-flex flex-column">
+  <div class="d-flex flex-column mt-5">
     <div class="mb-auto">
       <ul class="mobile-menu text-right site-menu">
-        <li><a routerLink="/seller">راهنمای ثبت نام</a></li>
-        <li><a routerLink="/seller">آموزش پنل فروشندگان</a></li>
-        <li><a routerLink="/seller/login">ورود به پنل فروشندگان</a></li>
-        <li><a routerLink="/seller/register">ثبت نام</a></li>
+        <li><a routerLink="/sellerBe">راهنمای ثبت نام</a></li>
+        <li><a routerLink="/sellerBe">آموزش پنل فروشندگان</a></li>
+        <li><a routerLink="/sellerBe/login">ورود به پنل فروشندگان</a></li>
+        <li><a routerLink="/sellerBe/register">ثبت نام</a></li>
       </ul>
     </div>
   </div>
