--- a/src/app/Core/dashboard-seller/product-seller/product-seller.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/product-seller.component.html
@@ -14,7 +14,7 @@
              'price', 'topText', 'offer', 'offerPercent', 'offerText' ]">
       <ng-template pTemplate="caption">
         <div class="table-header row">
-          <div class="col-sm-6"> لیست ویژگی های محصول
+          <div class="col-sm-6"> لیست محصولات
           </div>
           <div class="col-sm-6 text-left">
             <button pButton pRipple label="جدید" icon="pi pi-plus"
