--- a/src/app/Core/dashboard-seller/index/index.component.html
+++ b/src/app/Core/dashboard-seller/index/index.component.html
@@ -41,7 +41,7 @@
       <div class="p-d-flex justify-content-center top-row">
         <div class="p-ml-5 text-white text-center">آخرین بازدید : 13 شهریور 1399 ( 10:59 )</div>
         <div class="p-mr-5">
-          <a class="text-white"><i class="pi pi-power-off text-white pl-2" (click)="logOut()"></i>خروج کاربر</a>
+          <a class="text-white" (click)="logOut()"><i class="pi pi-power-off text-white pl-2" ></i>خروج کاربر</a>
         </div>
       </div>
     </p-toolbar>
