--- a/src/app/SharedComponent/header/nav-header/nav-header.component.html
+++ b/src/app/SharedComponent/header/nav-header/nav-header.component.html
@@ -466,7 +466,7 @@
                     </table>
                   </div>
                   <div class="dropcart__buttons">
-                    <button class="btn" style="background-color: #c33;color: #ffffff;font-size: 14px" [routerLink]="['/home/cart']">مشاهده سبد و تکمیل خرید</button>
+                    <button class="btn" style="background-color: #c33;color: #ffffff;font-size: 14px" [routerLink]="['/home/cart']" [disabled]="showCartList">مشاهده سبد و تکمیل خرید</button>
                   </div>
                 </div>
               </div>
