--- a/src/app/Layout/product-detail/product-detail.component.html
+++ b/src/app/Layout/product-detail/product-detail.component.html
@@ -1,5 +1,18 @@
 <app-header dir="rtl"></app-header>
-<p-toast position="center" [baseZIndex]="999999999" dir="rtl" [showTransitionOptions]="'0ms'"></p-toast>
+<p-dialog  [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+  <p-header>
+    <p  class="mr-3">انجام شد</p>
+  </p-header>
+  <hr style="width: 100%;"/>
+  <p class="text-right text-success mt-2">محصول با موفقیت به سبد خرید اضافه شد</p>
+  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده  سبد خرید کلیک کنید و برای افزودن دیگر محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
+  <hr style="margin-bottom: -15px"/>
+  <ng-template pTemplate="footer" >
+    <button pButton pRipple type="button"  (click)="displayBasic=false" label="ادامه"  class="p-button-danger float-left"></button>
+    <button pButton pRipple type="button"  (click)="goCart()" label="مشاهده سبد خرید"  class="p-button-danger float-left"></button>
+
+  </ng-template>
+</p-dialog>
 
 <div class="container-fluid text-right" dir="rtl">
   <div class="row mt-5">
