--- a/src/app/SharedComponent/header/mobile-header/mobile-header.component.html
+++ b/src/app/SharedComponent/header/mobile-header/mobile-header.component.html
@@ -136,8 +136,8 @@
       </mat-list>
     </div>
     <div class="mt-5 d-flex flex-row justify-content-center">
-      <button class="mr-auto p-button-success p-button-text" label="تکمیل و ثبت سفارش" pButton
-        [routerLink]="['/home/cart']" type="button"></button>
+      <button class="mr-auto p-button-success p-button-text" label="مشاهده سبد و تکمیل خرید" pButton
+        [routerLink]="['/home/cart']" [disabled]="showCartList" type="button"></button>
       <!--      <button type="button" pButton label=" نمایش سبد خرید" class="p-button-secondary p-button-text"></button>-->
     </div>
   </div>
